##Text encoding: utf-8

2004-10-10 Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/elements.xml.in,
	* glade/gtkperiodic.glade: Changed element 111 name and symbol to
	Roentgenium and Rg according to IUPAC recommendation.

2004-10-09 Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: update version to 0.2.6
	* Makefile.am: add some support for shared mime types.
	* gchemutils.xml.in: new file to support shared mime info
	(mime types tree will be polluted with chemical/* types).
	* chem3d/gtkchem3dviewer.cc,
	* chemistry/atom.cc,
	* chemistry/bond.cc,
	* chemistry/element.cc,
	* chemistry/xml-utils.cc
	* crystalviewer/crystalcleavage.cc,
	* crystalviewer/crystaldoc.cc,
	* crystalviewer/crystalline.cc,
	* crystalviewer/crystalview.cc,
	* crystalviewer/gtkcrystalviewer.cc,
	* gtk/gtkperiodic.c: Fixed memory leaks.

2004-03-17 Jean Bréfort  <jean.brefort@ac-dijon.fr>
	*configure.ac: update version to 0.2.5
	* chemistry/object.cc: fix a critical bug in Object::AddChild and made
	some optimization.

2004-03-10 Jean Bréfort  <jean.brefort@ac-dijon.fr>
	*configure.ac: removed unused gtk-doc checking
	* AUTHORS: new polish translator
	* crystalviewer/crystalatom.cc: avoid calling SetDefaultColor in constructor when
	Z == 0 (critical bug).

2004-02-08 Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* Makefile.am: fixed file list in EXTRA_DIST
	* gtkperiodic/gtkperiodic.c (gtk_periodic_init): removed const before char
	to avoid a compiler warning.

2004-02-07  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* configure.ac:
	* Doxyfile: update version to 0.2.3
	* chem3d/gtkchem3dviewer.cc: moved include gnome-vfs.h
	* chemistry/chemistry.cc: removed include libintl.h
	* Makefile.am:
	* tests/Makefile.am: make it work with automake 1.8.x

2004-02-04  Jean Bréfort  <jean.brefort@ac-dijon.fr>
	* chem3d/gtkchem3dviewer.cc: turn around an openbabel bug.
	* configure.ac: updated version to 0.2.2.
	* gtkperiodic/gtkperiodic.c: (gtk_periodic_init): fixed a new textdomain bug.
